--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@ name: Run API Tests with Report1
 on:
   workflow_dispatch:
   schedule:
-    - cron: '25 18 * * *'
+    - cron: '25 18 * * *'  # Runs every day at 18:25 UTC
 
 jobs:
   test:
@@ -23,9 +23,16 @@ jobs:
       - name: Run API Tests
         run: mvn clean test
 
-      - name: Upload Test Reports
+      - name: Upload Surefire Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: surefire-report
+          name: surefire-reports
           path: target/surefire-reports/
+
+      - name: Upload Allure Results (if available)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: target/allure-results/
