--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,8 +42,10 @@ jobs:
           ALLURE_VERSION=2.27.0
           wget -nv https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${ALLURE_VERSION}/allure-commandline-${ALLURE_VERSION}.tgz
           tar -xzf allure-commandline-${ALLURE_VERSION}.tgz
-          echo "PATH=$PATH:$(pwd)/allure-commandline-${ALLURE_VERSION}/bin" >> $GITHUB_ENV
-          
+
+      - name: Add Allure to PATH
+        run: echo "$(pwd)/allure-commandline-2.27.0/bin" >> $GITHUB_PATH
+
       - name: Generate Allure Report
         if: always()
         run: allure generate target/allure-results --clean -o target/allure-report
