--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,13 +38,14 @@ jobs:
           path: target/allure-results/
 
       - name: Download and Extract Allure CLI
-        run: |
+        run: 
           ALLURE_VERSION=2.27.0
           wget -nv https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${ALLURE_VERSION}/allure-commandline-${ALLURE_VERSION}.tgz
           tar -xzf allure-commandline-${ALLURE_VERSION}.tgz
+          mv allure-commandline-${ALLURE_VERSION} allure
 
       - name: Add Allure to PATH
-        run: echo "$(pwd)/allure-commandline-2.27.0/bin" >> $GITHUB_PATH
+        run: echo "${{ github.workspace }}/allure/bin" >> $GITHUB_PATH
 
       - name: Generate Allure Report
         if: always()
