--- a/.github/workflows/Smoke.yml
+++ b/.github/workflows/Smoke.yml
@@ -71,5 +71,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
-          publish_branch: gh-pages   # ✅ important if you haven't configured it in Settings
-          force_orphan: true         # ✅ ensures clean state (no commit history)
+          publish_branch: gh-pages   
+          force_orphan: true
+          
+      - name: Check report exists
+        run: ls -R docs
